--- a/index.html
+++ b/index.html
@@ -1,58 +1,24 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Webpage</title>
-  </head>
-  <body>
-    <h1>MBN's Portfolio</h1>
-    <h2>I am a Web Developer</h2>
-    <hr />
-    <div>
-      <h3>
-        <a href="../2.4 Movie Ranking Project/index.html" target="_blank">
-          Movie Ranking Project</a
-        >
-      </h3>
-    </div>
+<h1>It's My Birthday</h1>
 
-    <img
-      src="./assets/images/movie-ranking.png"
-      height="200"
-      alt="Movie ranking preview"
-    />
-    <div>
-      <h3>
-        <a href="../3.4 Birthday Invite Project/index.html" target="_blank">
-          Birthday Invite Project</a
-        >
-      </h3>
-    </div>
-    <img
-      src="./assets/images/birthday-invite.png"
-      height="200"
-      alt="birthday invite preview"
-    />
-    <hr />
-    <a href="../4.1 Webpages/public/about.html" target="_blank"> About Me</a>
-    <a href="../4.1 Webpages/public/contact.html" target="_blank">
-      Contact Me</a
-    >
-  </body>
-</html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<h2>On the 15th November</h2>
+<img
+  src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
+  alt="Birthday Cake Image"
+/>
+<h3>What to bring:</h3>
+<ul>
+  <li>Pizza</li>
+  <li>Savour</li>
+  <li>Tehzeeb Salad</li>
+  <li>Chocolate Cake</li>
+  <li>Big Apple</li>
+</ul>
+<h3>This is where you need to go:</h3>
+<a
+  href="https://www.google.com/maps/place/33%C2%B031'27.3%22N+73%C2%B010'04.1%22E/@33.5242521,73.1671563,19z/data=!3m1!4b1!4m13!1m8!3m7!1s0x38dfed8dabf00f19:0xb812318c3025e7a!2sDHA+Phase+II,+Islamabad,+Islamabad+Capital+Territory,+Pakistan!3b1!8m2!3d33.5368355!4d73.1644628!16s%2Fg%2F1vb9bfhl!3m3!8m2!3d33.524251!4d73.1678?entry=ttu"
+  target="_blank"
+  >Birthday Party Location</a
+>
+<div>
+  <img src="Screenshot of the location.jpg" alt="Birthday Party Location" />
+</div>
